@@ -1,5 +1,5 @@
 Package: jagsUI
-Version: 1.3.6
+Version: 1.3.7
 Date: 2015-5-6
 Title: A Wrapper Around rjags to Streamline JAGS Analyses
 Author: Ken Kellner <ken@kenkellner.com>
