@@ -1,14 +1,15 @@
 
 
 jagsUI <- jags <- function(data,inits=NULL,parameters.to.save,model.file,n.chains,n.adapt=100,n.iter,n.burnin=0,n.thin=1,
-                       modules=c('glm'),parallel=FALSE,DIC=TRUE,store.data=FALSE,codaOnly=FALSE,seed=floor(runif(1,1,10000)),bugs.format=FALSE){
+                       modules=c('glm'),parallel=FALSE,DIC=TRUE,store.data=FALSE,codaOnly=FALSE,seed=floor(runif(1,1,10000)),
+                       bugs.format=FALSE,verbose=TRUE){
   
   #Set random seed
   RNGkind('default')
   set.seed(seed)
   
   #Pass input data and parameter list through error check / processing
-  data.check <- process.input(data,parameters.to.save,inits,n.chains,n.iter,n.burnin,n.thin,DIC=DIC)
+  data.check <- process.input(data,parameters.to.save,inits,n.chains,n.iter,n.burnin,n.thin,DIC=DIC,verbose=verbose)
   data <- data.check$data
   parameters.to.save <- data.check$params
   inits <- data.check$inits
@@ -20,7 +21,7 @@ jagsUI <- jags <- function(data,inits=NULL,parameters.to.save,model.file,n.chain
   if(parallel && n.chains>1){
  
   par <- run.parallel(data,inits,parameters.to.save,model.file,n.chains,n.adapt,n.iter,n.burnin,n.thin,
-                      modules,seed,DIC) 
+                      modules,seed,DIC,verbose=verbose) 
   samples <- par$samples
   m <- par$model
     
@@ -33,7 +34,7 @@ jagsUI <- jags <- function(data,inits=NULL,parameters.to.save,model.file,n.chain
   #Set modules
   set.modules(modules,DIC)
   
-  rjags.output <- run.model(model.file,data,inits,parameters.to.save,n.chains,n.iter,n.burnin,n.thin,n.adapt)
+  rjags.output <- run.model(model.file,data,inits,parameters.to.save,n.chains,n.iter,n.burnin,n.thin,n.adapt,verbose=verbose)
   samples <- rjags.output$samples
   m <- rjags.output$m
   
@@ -56,10 +57,10 @@ jagsUI <- jags <- function(data,inits=NULL,parameters.to.save,model.file,n.chain
   
   
   #Reorganize JAGS output to match input parameter order
-  samples <- order.params(samples,parameters.to.save,DIC)
+  samples <- order.params(samples,parameters.to.save,DIC,verbose=verbose)
   
   #Convert rjags output to jagsUI form 
-  output <- process.output(samples,DIC=DIC,codaOnly)
+  output <- process.output(samples,DIC=DIC,codaOnly,verbose=verbose)
   
   #Add additional information to output list
   
