@@ -1,13 +1,13 @@
 
 jags.basic <- function(data,inits=NULL,parameters.to.save,model.file,n.chains,n.adapt=100,n.iter,n.burnin=0,n.thin=1,
-                           modules=c('glm'),parallel=FALSE,DIC=TRUE,seed=floor(runif(1,1,10000)),save.model=FALSE){
+                           modules=c('glm'),parallel=FALSE,DIC=TRUE,seed=floor(runif(1,1,10000)),save.model=FALSE,verbose=TRUE){
   
   #Set random seed
   RNGkind('default')
   set.seed(seed)
   
   #Pass input data and parameter list through error check / processing
-  data.check <- process.input(data,parameters.to.save,inits,n.chains,n.iter,n.burnin,n.thin,DIC=DIC)
+  data.check <- process.input(data,parameters.to.save,inits,n.chains,n.iter,n.burnin,n.thin,DIC=DIC,verbose=verbose)
   data <- data.check$data
   parameters.to.save <- data.check$params
   inits <- data.check$inits
@@ -19,7 +19,7 @@ jags.basic <- function(data,inits=NULL,parameters.to.save,model.file,n.chains,n.
   if(parallel && n.chains>1){
     
     par <- run.parallel(data,inits,parameters.to.save,model.file,n.chains,n.adapt,n.iter,n.burnin,n.thin,
-                        modules,seed,DIC) 
+                        modules,seed,DIC,verbose=verbose) 
     samples <- par$samples
     m <- par$model
     
@@ -32,7 +32,8 @@ jags.basic <- function(data,inits=NULL,parameters.to.save,model.file,n.chains,n.
     #Set modules
     set.modules(modules,DIC)
     
-    rjags.output <- run.model(model.file,data,inits,parameters.to.save,n.chains,n.iter,n.burnin,n.thin,n.adapt)
+    rjags.output <- run.model(model.file,data,inits,parameters.to.save,n.chains,n.iter,n.burnin,n.thin,n.adapt,
+                              verbose=verbose)
     samples <- rjags.output$samples
     m <- rjags.output$m
     
@@ -45,11 +46,11 @@ jags.basic <- function(data,inits=NULL,parameters.to.save,model.file,n.chains,n.
   #Get more info about MCMC run
   end.time <- Sys.time() 
   time <- round(as.numeric(end.time-start.time,units="mins"),digits=3)
-  cat('MCMC took',time,'minutes.\n')
+  if(verbose){cat('MCMC took',time,'minutes.\n')}
   
   if(save.model){
   output <- list()
-  samples <- order.params(samples,parameters.to.save,DIC)
+  samples <- order.params(samples,parameters.to.save,DIC,verbose=verbose)
   output$samples <- samples
   output$model <- m
   class(output) <- 'jagsUIbasic'
