@@ -28,28 +28,49 @@ if(update){
 #Adaptive phase using adapt()
 if(n.adapt>0){
   if(verbose){
-  cat('Adaptive phase,',n.adapt,'iterations x',n.chains,'chains','\n')
-  cat('If no progress bar appears JAGS has decided not to adapt','\n','\n')
-  }
-  x <- adapt(object=m,n.iter=n.adapt,progress.bar=pb,end.adaptation=TRUE)
+    cat('Adaptive phase,',n.adapt,'iterations x',n.chains,'chains','\n')
+    cat('If no progress bar appears JAGS has decided not to adapt','\n','\n')
+    x <- adapt(object=m,n.iter=n.adapt,progress.bar=pb,end.adaptation=TRUE)
+  } else {
+    null <- capture.output(
+    x <- adapt(object=m,n.iter=n.adapt,progress.bar=pb,end.adaptation=TRUE)
+    )}
 } else{if(verbose){cat('No adaptive period specified','\n','\n')}
        #If no adaptation period specified:
        #Force JAGS to not adapt (you have to allow it to adapt at least 1 iteration)
-       if(!update){x <- adapt(object=m,n.iter=1,end.adaptation=TRUE)}
+       if(!update){
+         if(verbose){
+            x <- adapt(object=m,n.iter=1,end.adaptation=TRUE)
+         } else {
+            null <- capture.output(
+            x <- adapt(object=m,n.iter=1,end.adaptation=TRUE)  
+            )} 
+       }
 }
 
 #Burn-in phase using update()  
 if(n.burnin>0){
-  if(verbose){cat('\n','Burn-in phase,',n.burnin,'iterations x',n.chains,'chains','\n','\n')}
-  update(object=m,n.iter=n.burnin,progress.bar=pb)
-  if(verbose){cat('\n')}
+  if(verbose){
+    cat('\n','Burn-in phase,',n.burnin,'iterations x',n.chains,'chains','\n','\n')
+    update(object=m,n.iter=n.burnin,progress.bar=pb)
+    cat('\n')
+  } else {
+    null <- capture.output(
+    update(object=m,n.iter=n.burnin,progress.bar=pb)  
+  )}
 } else if(verbose){cat('No burn-in specified','\n','\n')}
 
 #Sample from posterior using coda.samples() 
-if(verbose){cat('Sampling from joint posterior,',(n.iter-n.burnin),'iterations x',n.chains,'chains','\n','\n')}
-samples <- coda.samples(model=m,variable.names=parameters.to.save,n.iter=(n.iter-n.burnin),thin=n.thin,
-                        progress.bar=pb)
-if(verbose){cat('\n')}
+if(verbose){
+  cat('Sampling from joint posterior,',(n.iter-n.burnin),'iterations x',n.chains,'chains','\n','\n')
+  samples <- coda.samples(model=m,variable.names=parameters.to.save,n.iter=(n.iter-n.burnin),thin=n.thin,
+                          progress.bar=pb)
+  cat('\n')
+} else {
+  null <- capture.output(
+  samples <- coda.samples(model=m,variable.names=parameters.to.save,n.iter=(n.iter-n.burnin),thin=n.thin,
+                          progress.bar=pb)
+  )}
 
 return(list(m=m,samples=samples))
 }
