@@ -1,3 +1,7 @@
+# Changes from Version 1.3.6 to 1.3.7 [6-May-2015] #
+
+Add verbose argument to functions to allow suppression of all text output in the console as the function runs.
+
 # Changes from Version 1.3.5 to 1.3.6 [6-May-2015] #
 
 Change method for closing connection to clusters when running in parallel to avoid closing unrelated connections. Adjust output for jags.basic.
